--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc"
+    "build": "rimraf dist && tsc",
+    "watch": "tsc --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mobx": "5.9.0",
+    "mobx-react-lite": "1.0.1",
     "react": "16.8.6",
     "react-native": "0.60.3"
   },
